2003-09-21  Gary Thomas  <gary@mlbassoc.com>

	* misc/redboot_RAM.ecm: 
	* misc/redboot_ROM.ecm:  Adjust for changes in RedBoot
	template - DNS now must be enabled manually.

2003-02-13  Patrick Doyle  <wpd@delcomsys.com>
	* src/cerf_misc.c: Replaced explicit prototype of memset with
	#include <string.h>.

2002-08-12  Mark Salter  <msalter@redhat.com>

	* misc/redboot_ROM.ecm: Remove CYGSEM_REDBOOT_ARM_LINUX_BOOT.
	* misc/redboot_RAM.ecm: Ditto.

2002-05-14  Jesper Skov  <jskov@redhat.com>

	* src/cerf_misc.c (hal_mmu_init): Fixed warning.

2002-05-07  Gary Thomas  <gthomas@redhat.com>

	* cdl/hal_arm_sa11x0_cerf.cdl: 
	Standardize CYGNUM_HAL_VIRTUAL_VECTOR_CONSOLE_CHANNEL_DEFAULT usage.

2002-05-01  Gary Thomas  <gthomas@redhat.com>

	* include/plf_mmap.h: Fix mapping macros (I/O region).

2002-04-16  Gary Thomas  <gthomas@redhat.com>

	* src/cerf_misc.c (hal_mmu_init): Add unmapped DRAM.

2002-02-05  Gary Thomas  <gthomas@redhat.com>

	* misc/redboot_ROM.ecm: 
	* misc/redboot_RAM.ecm: Update with ZLIB, latest template.

	* cdl/hal_arm_sa11x0_cerf.cdl: Add product info for RedBoot.

2002-02-04  Gary Thomas  <gthomas@redhat.com>

	* src/cerf_misc.c: 
	* misc/redboot_ROM.ecm: 
	* misc/redboot_RAM.ecm: 
	* include/pkgconf/mlt_arm_sa11x0_cerf_rom.mlt: 
	* include/pkgconf/mlt_arm_sa11x0_cerf_rom.ldi: 
	* include/pkgconf/mlt_arm_sa11x0_cerf_rom.h: 
	* include/pkgconf/mlt_arm_sa11x0_cerf_ram.mlt: 
	* include/pkgconf/mlt_arm_sa11x0_cerf_ram.ldi: 
	* include/pkgconf/mlt_arm_sa11x0_cerf_ram.h: 
	* include/plf_mmap.h: 
	* include/plf_io.h: 
	* include/hal_platform_setup.h: 
	* include/cerf.h: 
	* cdl/hal_arm_sa11x0_cerf.cdl: New file(s) - port to Intrinsyc CerfCube.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//